--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
       "files": ["*.js"],
       "rules": {
         "react/no-unused-state": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        
       }
     }
   ],
