--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "flib.chat",
   "scripts": {
     "start": "node index.js",
-    "dev": "npm run copy && parcel ./static/pages/**/*.html --no-cache -p 3000",
+    "dev": "parcel ./static/index.html --no-cache -p 3000",
     "copy": "mkdir -p dist && cp -r static/images dist",
-    "build": "npm run copy && parcel build ./static/pages/**/*.html",
+    "build": "parcel build ./static/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "staticFiles": {
-    "staticPath": "static/images",
-    "watcherGlob": false
+  "alias": {
+    "utils": "./src/utils"
   },
   "author": "gineff",
   "license": "ISC",
@@ -20,6 +19,7 @@
     "parcel": "2.7.0"
   },
   "devDependencies": {
+    "@types/node": "^18.8.3",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "6.0.3",
@@ -31,6 +31,7 @@
     "parcel": "2.7.0",
     "path-browserify": "1.0.1",
     "postcss": "8.4.16",
+    "postcss-import": "^12.0.1",
     "postcss-nested": "5.0.6",
     "postcss-nesting": "10.2.0",
     "prettier": "2.7.1",
@@ -38,11 +39,12 @@
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
+    "typescript": "^4.8.4",
     "url": "0.11.0"
   },
   "dependencies": {
     "express": "4.18.1",
-    "parcel-transformer-tem": "1.0.2",
+    "parcel-transformer-tem": "1.0.1",
     "path": "0.12.7"
   }
 }
