--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "parcel ./static/index.html --no-cache -p 3000",
     "copy": "mkdir -p dist && cp -r static/images dist",
     "build": "parcel build ./static/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "stylelint": "stylelint '**/*{.css,.scss}'",
+    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix"
   },
   "alias": {
     "utils": "./src/utils",
@@ -41,6 +43,13 @@
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
+    "stylelint": "14.13.0",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-rational-order": "0.1.2",
+    "stylelint-config-standard": "28.0.0",
+    "stylelint-order": "5.0.0",
+    "stylelint-prettier": "2.0.0",
+    "stylelint-scss": "4.3.0",
     "typescript": "^4.8.4",
     "url": "0.11.0"
   },
