--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,8 @@
   command = "npm run build"
   publish = "dist"
 
-[[redirect]]
+[[redirects]]
   from = "/*"
   to = "index.html"
   status = 200
+  force = true
