--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "gineff",
   "license": "ISC",
   "engines": {
-    "node": ">= 18.8.0",
+    "node": "= 18.8.0",
     "parcel": "2.7.0"
   },
   "devDependencies": {
@@ -35,7 +35,6 @@
     "parcel": "2.7.0",
     "path-browserify": "1.0.1",
     "postcss": "8.4.16",
-    "postcss-import": "^12.0.1",
     "postcss-nested": "5.0.6",
     "postcss-nesting": "10.2.0",
     "prettier": "2.7.1",
