--- a/package.json
+++ b/package.json
@@ -19,23 +19,28 @@
   "author": "gineff",
   "license": "ISC",
   "engines": {
-    "node": "= 18.8.0",
+    "node": "= 18.0.0",
     "parcel": "2.7.0"
   },
+  "dependencies": {
+    "express": "4.18.2",
+    "parcel-transformer-tem": "1.0.1",
+    "path": "0.12.7"
+  },
   "devDependencies": {
-    "@types/node": "^18.8.3",
+    "@types/node": "18.8.5",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
-    "eslint": "8.23.1",
+    "eslint": "8.25.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.5.0",
     "events": "3.3.0",
     "parcel": "2.7.0",
     "path-browserify": "1.0.1",
-    "postcss": "8.4.16",
-    "postcss-nested": "5.0.6",
+    "postcss": "8.4.18",
+    "postcss-nested": "6.0.0",
     "postcss-nesting": "10.2.0",
     "prettier": "2.7.1",
     "querystring-es3": "0.2.1",
@@ -49,12 +54,7 @@
     "stylelint-order": "5.0.0",
     "stylelint-prettier": "2.0.0",
     "stylelint-scss": "4.3.0",
-    "typescript": "^4.8.4",
+    "typescript": "4.8.4",
     "url": "0.11.0"
-  },
-  "dependencies": {
-    "express": "4.18.1",
-    "parcel-transformer-tem": "1.0.1",
-    "path": "0.12.7"
   }
 }
