--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "parcel build ./static/index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "stylelint": "stylelint '**/*{.css,.scss}'",
-    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix"
+    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "npm run lint -- --fix"
   },
   "alias": {
     "utils": "./src/utils",
@@ -29,13 +31,16 @@
   },
   "devDependencies": {
     "@types/node": "18.8.5",
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "@typescript-eslint/parser": "5.40.0",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
     "eslint": "8.25.0",
-    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
     "events": "3.3.0",
     "parcel": "2.7.0",
     "path-browserify": "1.0.1",
