--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,34 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": ["eslint:recommended", "airbnb", "prettier"],
-  "overrides": [
-    {
-      "files": ["*.js"],
-      "rules": {
-        "react/no-unused-state": "off",
-        "react/prop-types": "off",
-        
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "overrides": [
+      {
+        "files": ["*.js"],
+        "rules": {
+          "react/no-unused-state": "off",
+          "react/prop-types": "off"
+          
+        }
       }
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "rules": {
+      "no-console": "off",
+      "quotes": ["error", "double"]
     }
-  ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "rules": {
-    "no-console": "off",
-    "quotes": ["error", "double"]
-  }
 }
