--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,8 +61,10 @@ jobs:
         run: bash tests-second-floor/sprint_1/check_parcel.sh
       - name: Check PORT 3000
         run: bash tests-second-floor/sprint_1/check_port.sh
-      - name: Check routing
-        run: node tests-second-floor/sprint_1/check_routing.js
+        # тест Check routing, не прохиодит. Пока не получается разобраться почему. По совету наставника
+        # времено убирваю этот тест
+      #- name: Check routing
+      #  run: node tests-second-floor/sprint_1/check_routing.js
         # sprint 2 checks
       - name: Check typescript in package.json
         run: node tests-second-floor/sprint_2/check_typescript.js
