--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "events": "3.3.0",
+    "os-browserify": "0.3.0",
     "parcel": "2.7.0",
     "path-browserify": "1.0.1",
     "prettier": "2.7.1",
