--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,6 @@
         "rules": {
           "react/no-unused-state": "off",
           "react/prop-types": "off"
-          
         }
       }
     ],
@@ -29,6 +28,7 @@
     ],
     "rules": {
       "no-console": "off",
-      "quotes": ["error", "double"]
+      "quotes": ["error", "double"],
+      "@typescript-eslint/no-explicit-any": "off"
     }
 }
