--- a/package.json
+++ b/package.json
@@ -1,60 +1,68 @@
 {
-  "name": "messenger",
-  "version": "0.0.1",
-  "description": "flib.chat",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
+  "description": "My webpack project",
   "scripts": {
     "start": "node ./index.js",
-    "dev": "parcel ./src/index.html --no-cache -p 3000",
     "copy": "mkdir -p dist && cp -r static/images dist",
-    "build": "parcel build ./src/index.html",
+    "build": "webpack --mode=production --define-process-env-node-env=production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "stylelint": "stylelint '**/*{.css,.scss}'",
+    "stylelint": "stylelint 'src/**/*{.css,.scss}'",
     "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --define-process-env-node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve",
+    "prepare": "husky install"
   },
-  "alias": {
-    "utils": "./src/utils",
-    "components": "./src/components",
-    "pages": "./src/pages",
-    "router": "./src/router",
-    "services": "./src/services",
-    "api": "./src/api",
-    "static": "./static"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "author": "gineff",
   "license": "ISC",
   "engines": {
-    "node": "= 18.8.0",
-    "parcel": "2.7.0"
+    "node": "= 18.8.0"
   },
   "dependencies": {
     "dotenv": "16.0.3",
     "express": "4.18.2",
-    "parcel-transformer-tem": "1.0.1",
     "path": "0.12.7"
   },
   "devDependencies": {
+    "@types/chai": "4.3.4",
+    "@types/mocha": "10.0.1",
     "@types/node": "18.8.5",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
+    "@webpack-cli/generators": "3.0.0",
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "6.0.3",
+    "chai": "4.3.7",
     "crypto-browserify": "3.12.0",
+    "css-loader": "6.7.2",
     "eslint": "8.25.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "events": "3.3.0",
+    "html-loader": "4.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.2",
+    "mini-css-extract-plugin": "2.7.1",
+    "mocha": "10.1.0",
     "os-browserify": "0.3.0",
-    "parcel": "2.7.0",
     "path-browserify": "1.0.1",
     "prettier": "2.7.1",
     "querystring-es3": "0.2.1",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
+    "style-loader": "3.3.1",
     "stylelint": "14.13.0",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-rational-order": "0.1.2",
@@ -62,7 +70,11 @@
     "stylelint-order": "5.0.0",
     "stylelint-prettier": "2.0.0",
     "stylelint-scss": "4.3.0",
+    "ts-loader": "9.4.2",
     "typescript": "4.8.4",
-    "url": "0.11.0"
+    "url": "0.11.0",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.0",
+    "webpack-dev-server": "4.11.1"
   }
 }
