--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "My webpack project",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "npm run build:prod && npm run copy && node ./index.js",
     "copy": "mkdir -p dist && cp -r static/images dist",
     "build": "webpack --mode=production --define-process-env-node-env=production",
     "test": "mocha",
@@ -14,7 +14,7 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --define-process-env-node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve",
+    "dev": "webpack serve",
     "prepare": "husky install"
   },
   "husky": {
