--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --define-process-env-node-env=production",
     "watch": "webpack --watch",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
