--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{ts}": "eslint --cache --fix"
   },
   "author": "gineff",
   "license": "ISC",
@@ -56,6 +59,7 @@
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.2",
+    "lint-staged": "13.1.0",
     "mini-css-extract-plugin": "2.7.1",
     "mocha": "10.1.0",
     "os-browserify": "0.3.0",
@@ -66,10 +70,9 @@
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
     "style-loader": "3.3.1",
-    "stylelint": "14.13.0",
-    "stylelint-config-prettier": "9.0.3",
-    "stylelint-config-rational-order": "0.1.2",
-    "stylelint-config-standard": "28.0.0",
+    "stylelint": "14.16.0",
+    "stylelint-config-prettier": "9.0.4",
+    "stylelint-config-standard": "29.0.0",
     "stylelint-order": "5.0.0",
     "stylelint-prettier": "2.0.0",
     "stylelint-scss": "4.3.0",
